[DPDK] Skip build dependencies for package manager installation (#1925)
* package manager installs dependencies already, so if installing from pacakge manager we don't need to install meson and python. Change installs for 18.04 and rhel to skip

--- a/microsoft/runbook/qemu/qemu.yml
+++ b/microsoft/runbook/qemu/qemu.yml
@@ -10,12 +10,36 @@ variable:
     value: ""
 notifier:
   - type: html
+  - type: console
+
+transformer:
+  - type: qemu_installer
+    connection:
+      address: $(address)
+      username: $(username)
+      private_key_file: $(admin_private_key_file)
+    installer:
+      type: qemu_package
+  - type: libvirt_installer
+    connection:
+      address: $(address)
+      username: $(username)
+      private_key_file: $(admin_private_key_file)
+    installer:
+      type: libvirt_package
+
 platform:
   - type: qemu
     admin_private_key_file: $(admin_private_key_file)
     keep_environment: $(keep_environment)
+    qemu:
+      hosts:
+        - address: $(address)
+          username: $(username)
+          private_key_file: $(admin_private_key_file)
     requirement:
       qemu:
-        qcow2: $(qcow2)
+        disk_img: $(qcow2)
+        disk_img_format: "qcow2"
         cloud_init:
           extra_user_data: $(extra_user_data)
